# reachy-mini-gemini

./: README.md  pyproject.toml  style.css
reachy_mini_gemini_app/: config.py  main.py  web_server.py
reachy_mini_gemini_app/static/: index.html
src/reachy_mini_gemini_app/: gemini_handler.py  main.py  movements.py
